# Setu

./: genesis.json
consensus/: Cargo.toml
consensus/src/: anchor_builder.rs  engine.rs  tee_verifier.rs
consensus/src/liveness/: proposer_election.rs
crates/setu-enclave/: Cargo.toml
crates/setu-enclave/src/: stf.rs
crates/setu-enclave/src/mock/: mod.rs
crates/setu-keys/src/: address_derive.rs  lib.rs
crates/setu-router-core/: Cargo.toml
crates/setu-router-core/src/: unified_router.rs
crates/setu-router-core/src/strategy/: object_shard.rs  subnet_shard.rs
crates/setu-runtime/: Cargo.toml  VM_SPEC.md
crates/setu-runtime/examples/: basic_transfer.rs  burn_or_redirect.rs  persistent_objects.rs  split_payment.rs  sui_contract_e2e.rs  sui_lightning_contract_e2e.rs  tiered_airdrop.rs
crates/setu-runtime/src/: error.rs  executor.rs  lib.rs  program_vm.rs  setu_state_store.rs  state.rs  sui_bridge.rs  sui_vm.rs  transaction.rs
scripts/: tps_test.sh
setu-benchmark/src/: benchmark.rs  main.rs  report.rs
setu-cli/src/commands/: keygen.rs
setu-solver/: Cargo.toml
setu-validator/: Cargo.toml
setu-validator/src/: infra_executor.rs  main.rs
setu-validator/src/task_preparer/: batch.rs  single.rs
storage/: Cargo.toml
storage/src/memory/: anchor_store.rs
storage/src/rocks/: anchor_store.rs
storage/src/state/: batch_snapshot.rs  manager.rs  provider.rs
types/: Cargo.toml
types/src/: coin.rs  consensus.rs  event.rs  genesis.rs  hash_utils.rs  lib.rs  merkle.rs  object.rs  state_key.rs  subnet.rs
types/src/task/: solver_task.rs
(+1 files in other folders)
