[package]
name = "setu-storage"
version.workspace = true
edition = "2021"

[features]
default = []
test-utils = ["setu-types/test-utils"]

[dependencies]
setu-types = { path = "../types" }
setu-merkle = { path = "../crates/setu-merkle" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
hex = "0.4"
async-trait = "0.1"
dashmap = "5.5"  # Lock-free concurrent HashMap for in-memory stores

# RocksDB dependencies
rocksdb = "0.22"
bincode = "2.0.0-rc.3"  # Use bincode 2.0 for Encode/Decode traits
bcs = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
setu-types = { path = "../types", features = ["test-utils"] }
